    - Fixed Anti-Tiberium Sonic Emitter, Anti-Blue Tiberium Sonic Emitter, and Tiberium Detonation Charge not being blueprintable
    - Fixed Sonic Repulsor Fields being able to be attacked and destroyed
    - Fully removed old Ion Beam Projector and Tiberium Power Plant entities that were deprecated 2 years ago so they stop popping up
  Changes:
    - Tiberium mining, acceleration, and containment structures can now be built in space when using the Space Exploration mod
    - Changed default Blue Tiberium appearance timing when Space Exploration is active to account for slow evolution factor growth
    - Liquid Tiberium Power technology made cheaper and now has Nuclear Power as a prerequisite
    - Tiberium Power Plant recipe adjusted to require Steam Turbines instead of Electric Engine Units
    - Rebalanced Tiberium Centifuging recipe times to make lower tiers faster and higher tiers slower (10 10 15 20 -> 4 8 16 32)
  Features:
    - Added a new recipe to use high-temperature steam for quicker Liquid Tiberium production
    - Added compatibility for P.U.M.P. (Thanks to Ferlonas and Xcone for the pull request)
    - Added compatibility for Mining Drones 2.0 Remastered
---------------------------------------------------------------------------------------------------
Version: 1.1.28
  Bugfixes:
    - Fixed crash that occurred when trying to damage entity that died on the same tick (control.lua:1356: in function 'safeDamage')
    - Fixed /tibRebuildLists command causing Sonic Emitters to stop working
    - Fixed new chunks spawning with way too much Tiberium when using tibPerformanceMultiplier or Tiberium Growth Optimization setting
    - Fixed various typos in English and Russian descriptions (Thanks to CV514 for the pull request)
    - Fixed issue where the spread of Blue Tiberium did not slow down after reaching saturation on the Nauvis surface
    - Fixed some Tiberium growth settings taking up to 5 minutes to take effect after restarting
  Changes: